[package]
name = "tfchain_client"
version = "0.1.0"
authors = ["dylanVerstraete <dylan_verstraete1@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "tfchain_client"

[[bin]]
path = "src/main.rs"
name = "tfchain_cli"

[dependencies]
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", rev = "a08d8ae8017535051975f5a7ff20bd93d35e4eb3" }
codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0", default-features = false }
hex = { version = "0.4", default-features = false }
clap = "3.0.5"
git-version = "0.3.5"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.pallet_balance]
git = "https://github.com/paritytech/substrate"
package = "pallet-balances"
version = "3.0.0"

[dependencies.runtime]
git = "https://github.com/threefoldtech/tfchain"
package = "tfchain-runtime"
# branch = "development"
rev = "1f41591"

[dependencies.runtime_legacy]
git = "https://github.com/threefoldtech/tfchain"
package = "tfchain-runtime"
rev = "57ad7462"

[dependencies.pallet_burning]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-burning"
# branch = "development"
rev = "1f41591"

[dependencies.tfchain_support]
git = "https://github.com/threefoldtech/tfchain"
package = "tfchain-support"
rev = "1f41591"

[dependencies.pallet_dao]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-dao"
rev = "1f41591"

[dependencies.pallet_burning_legacy]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-burning"
rev = "57ad7462"

[dependencies.pallet_kvstore]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-kvstore"
# branch = "development"
rev = "1f41591"

[dependencies.pallet_kvstore_legacy]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-kvstore"
rev = "57ad7462"

[dependencies.pallet_runtime_upgrade]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-runtime-upgrade"
# branch = "development"
rev = "1f41591"

[dependencies.pallet_runtime_upgrade_legacy]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-runtime-upgrade"
rev = "57ad7462"

[dependencies.pallet_smart_contract]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-smart-contract"
# branch = "development"
rev = "1f41591"

[dependencies.pallet_smart_contract_legacy]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-smart-contract"
rev = "57ad7462"

[dependencies.pallet_tfgrid]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-tfgrid"
# branch = "development"
rev = "1f41591"

[dependencies.pallet_tfgrid_legacy]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-tfgrid"
rev = "57ad7462"

[dependencies.substrate_validator_set]
git = "https://github.com/threefoldtech/tfchain"
package = "substrate-validator-set"
# branch = "development"
rev = "1f41591"

[dependencies.substrate_validator_set_legacy]
git = "https://github.com/threefoldtech/tfchain"
package = "substrate-validator-set"
rev = "57ad7462"

[dependencies.pallet_tft_price]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-tft-price"
rev = "1f41591"

[dependencies.pallet_tft_price_legacy]
git = "https://github.com/threefoldtech/tfchain"
package = "pallet-tft-price"
rev = "57ad7462"

[dependencies.sp-core]
version = "3.0.0"

[dependencies.system]
version = "3.0.0"
package = "frame-system"

[dependencies.keyring]
package = "sp-keyring"
version = "3.0.0"

[dependencies.support]
package = "frame-support"
version = "3.0.0"

[dependencies.pallet_grandpa]
package = "pallet-grandpa"
version = "3.0.0"

[dependencies.sp_application_crypto]
package = "sp-application-crypto"
version = "3.0.0"

[dependencies.pallet_sudo]
package = "pallet-sudo"
version = "3.0.0"

[dependencies.pallet_collective]
package = "pallet-collective"
version = "3.0.0"

[dependencies.pallet_scheduler]
package = "pallet-scheduler"
version = "3.0.0"

[dependencies.pallet_session]
package = "pallet-session"
version = "3.0.0"

[dependencies.pallet_tft_bridge]
git = "https://github.com/threefoldtech/tfchain_tft_bridge"
package = "pallet-tft-bridge"
rev = "e186513"

[dependencies.sp-runtime]
version = "3.0.0"

[patch.'https://github.com/paritytech/substrate']
metadata = { package = "frame-metadata", version = "13.0.0" }
sp-version = { version = "3.0.0" }
balances = { package = "pallet-balances", version = "3.0.0" }
sc-rpc-api = "0.9.0"
sp-core = "3.0.0"
sp-runtime = { package = "sp-runtime", version = "3.0.0" }
system = { package = "frame-system", version = "3.0.0" }
support = { package = "frame-support", version = "3.0.0" }

