[package]
name = "tfchain_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.24"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
sp-keyring = "6.0.0"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
